--- a/Assignment1/src/ui/CreateLocalAddressJPanel.form
+++ b/Assignment1/src/ui/CreateLocalAddressJPanel.form
@@ -16,13 +16,99 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="fieldLocalZipCode" min="-2" max="-2" attributes="0"/>
+                          <Component id="fieldLocalCity" min="-2" max="-2" attributes="0"/>
+                          <Component id="fieldLocalUnit" min="-2" max="-2" attributes="0"/>
+                          <Component id="fieldLocalStreet" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="120" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="fieldLocalZipCodet" min="-2" pref="138" max="-2" attributes="0"/>
+                          <Component id="fieldLocalUnitt" alignment="0" min="-2" pref="138" max="-2" attributes="0"/>
+                          <Component id="fieldLocalStreett" min="-2" pref="138" max="-2" attributes="0"/>
+                          <Component id="fieldLocalCityt" alignment="0" min="-2" pref="138" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="135" max="-2" attributes="0"/>
+                      <Component id="btnSave" min="-2" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+              <EmptySpace min="-2" pref="148" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="300" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="fieldLocalStreet" min="-2" max="-2" attributes="0"/>
+                  <Component id="fieldLocalStreett" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="fieldLocalUnit" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="fieldLocalUnitt" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="fieldLocalCity" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="fieldLocalCityt" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="fieldLocalZipCode" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="fieldLocalZipCodet" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
+              <Component id="btnSave" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="137" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JLabel" name="fieldLocalStreet">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Street "/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="fieldLocalUnit">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Unit Number"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="fieldLocalCity">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="City"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="fieldLocalZipCode">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Zip Code"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="fieldLocalStreett">
+    </Component>
+    <Component class="javax.swing.JTextField" name="fieldLocalUnitt">
+    </Component>
+    <Component class="javax.swing.JTextField" name="fieldLocalCityt">
+    </Component>
+    <Component class="javax.swing.JTextField" name="fieldLocalZipCodet">
+    </Component>
+    <Component class="javax.swing.JButton" name="btnSave">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Save"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveActionPerformed"/>
+      </Events>
+    </Component>
+  </SubComponents>
 </Form>
