--- a/Assignment1/src/ui/ViewLocalAddressJPanel.form
+++ b/Assignment1/src/ui/ViewLocalAddressJPanel.form
@@ -16,13 +16,112 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="500" max="32767" attributes="0"/>
+          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
+              <Group type="102" attributes="0">
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              </Group>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="300" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="480" max="32767" attributes="0"/>
+          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
+              <Group type="102" attributes="0">
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              </Group>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Container class="javax.swing.JPanel" name="jPanel1">
+
+      <Layout>
+        <DimensionLayout dim="0">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="fieldLocalZipCode" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldLocalCity" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldLocalUnit" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldLocalStreet" alignment="1" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="157" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="fieldLocalStreett" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldLocalUnitt" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldLocalCityt" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldLocalZipCodet" alignment="1" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="185" max="32767" attributes="0"/>
+              </Group>
+          </Group>
+        </DimensionLayout>
+        <DimensionLayout dim="1">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="fieldLocalStreet" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldLocalStreett" alignment="1" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="fieldLocalUnit" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldLocalUnitt" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="fieldLocalCity" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldLocalCityt" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="fieldLocalZipCode" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldLocalZipCodet" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="230" max="32767" attributes="0"/>
+              </Group>
+          </Group>
+        </DimensionLayout>
+      </Layout>
+      <SubComponents>
+        <Component class="javax.swing.JLabel" name="fieldLocalStreet">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Street "/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="fieldLocalUnit">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Unit Number"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="fieldLocalCity">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="City"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="fieldLocalZipCode">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Zip Code"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="fieldLocalStreett">
+        </Component>
+        <Component class="javax.swing.JTextField" name="fieldLocalUnitt">
+        </Component>
+        <Component class="javax.swing.JTextField" name="fieldLocalCityt">
+        </Component>
+        <Component class="javax.swing.JTextField" name="fieldLocalZipCodet">
+        </Component>
+      </SubComponents>
+    </Container>
+  </SubComponents>
 </Form>
