--- a/Assignment1/src/ui/CreateBankAccountJPanel.form
+++ b/Assignment1/src/ui/CreateBankAccountJPanel.form
@@ -29,14 +29,14 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="fieldBalance" min="-2" max="-2" attributes="0"/>
                           <Component id="fieldAccountType" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="fieldRoutingNum" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="fieldAccountNum" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="140" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="fieldAccountNumbert" alignment="1" pref="116" max="32767" attributes="0"/>
                           <Component id="fieldRoutingNumbert" alignment="1" max="32767" attributes="0"/>
@@ -44,9 +44,9 @@
                           <Component id="fieldAccountBalancet" alignment="1" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <Group type="102" alignment="1" attributes="0">
+                  <Group type="102" attributes="0">
                       <Component id="fieldBankName" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="169" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="fieldBankNamet" min="-2" pref="116" max="-2" attributes="0"/>
                   </Group>
               </Group>
