--- a/Assignment1/src/ui/ViewHomeAddressJPanel.form
+++ b/Assignment1/src/ui/ViewHomeAddressJPanel.form
@@ -41,6 +41,11 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JPanel" name="jPanel1">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="ff" red="cc" type="rgb"/>
+        </Property>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -53,12 +58,12 @@
                       <Component id="fieldHomeZipCode" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="fieldHomeCity" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="136" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="fieldHomeCityt" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="fieldHomeZipCodet" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="fieldHomeUnitt" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="fieldHomeStreett" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="fieldHomeStreett" min="-2" pref="112" max="-2" attributes="0"/>
+                      <Component id="fieldHomeCityt" min="-2" pref="112" max="-2" attributes="0"/>
+                      <Component id="fieldHomeUnitt" min="-2" pref="112" max="-2" attributes="0"/>
+                      <Component id="fieldHomeZipCodet" alignment="0" min="-2" pref="112" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="200" max="32767" attributes="0"/>
               </Group>
